--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
 </head>
 <body>
 <h1>Hello2</h1>
-<iframe src="ga.html" id="gaframe">
+<script>
+    function gaProxy() {
+        (window.gaProxyQueue = window.gaProxyQueue || []).push(arguments);
+    }
+    gaProxy('create', 'UA-103373032-2', 'auto');
+    gaProxy('send', 'pageview', 'ga');
+    function gaframeLoaded() {
+        gaProxy = document.getElementById('gaframe').contentWindow.ga;
+        (window.gaProxyQueue || []).forEach(function (args) {
+            gaProxy.call(args);
+        });
+    }
+</script>
+<iframe src="ga.html" id="gaframe" onload="gaframeLoaded()">
 </body>
 </html>
