--- a/index.html
+++ b/index.html
@@ -10,16 +10,14 @@
 <body>
 <h1>Hello v4</h1>
 <script>
-    function gaProxy() {
-        (window.gaProxyQueue = window.gaProxyQueue || []).push(arguments);
-    }
-    gaProxy('create', 'UA-103373032-2', 'auto');
-    gaProxy('send', 'pageview', 'ga');
+    window.ga = window.ga || function () { (window.ga.q = window.ga.q||[]).push(arguments); }
+    ga('create', 'UA-103373032-2', 'auto');
+    ga('send', 'pageview', 'ga');
     function gaframeLoaded() {
         var win = document.getElementById('gaframe').contentWindow;
-        gaProxy = win.ga;
-        (window.gaProxyQueue || []).forEach(function (args) {
-            gaProxy.apply(win, args);
+        ga = win.ga;
+        (window.ga.q || []).forEach(function (args) {
+            ga.apply(win, args);
         });
     }
 </script>
